openvidu-components: Integrated broadcast feature

--- a/openvidu-components-angular/src/app/testing-app/testing.component.html
+++ b/openvidu-components-angular/src/app/testing-app/testing.component.html
@@ -209,7 +209,7 @@
 			id="custom-activities-panel"
 		>
 			<ov-recording-activity *ngIf="recordingActivity"></ov-recording-activity>
-			<ov-streaming-activity *ngIf="streamingActivity" [streamingInfo]="streamingInfo" [streamingError]="streamingError"></ov-streaming-activity>
+			<ov-streaming-activity *ngIf="streamingActivity" [streamingError]="streamingError"></ov-streaming-activity>
 		</ov-activities-panel>
 	</ng-template>
 
