--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
@@ -50,7 +50,7 @@
 		(onActivitiesPanelButtonClicked)="onActivitiesPanelButtonClicked()"
 		(onStartRecordingClicked)="onStartRecordingClicked('toolbar')"
 		(onStopRecordingClicked)="onStopRecordingClicked('toolbar')"
-		(onStopStreamingClicked)="onStopStreamingClicked('toolbar')"
+		(onStopBroadcastingClicked)="onStopBroadcastingClicked('toolbar')"
 	>
 		<ng-template #toolbarAdditionalButtons>
 			<ng-container *ngTemplateOutlet="openviduAngularToolbarAdditionalButtonsTemplate"></ng-container>
@@ -100,8 +100,8 @@
 		(onStartRecordingClicked)="onStartRecordingClicked('panel')"
 		(onStopRecordingClicked)="onStopRecordingClicked('panel')"
 		(onDeleteRecordingClicked)="onDeleteRecordingClicked($event)"
-		(onStartStreamingClicked)="onStartStreamingClicked($event)"
-		(onStopStreamingClicked)="onStopStreamingClicked('panel')"
+		(onStartBroadcastingClicked)="onStartBroadcastingClicked($event)"
+		(onStopBroadcastingClicked)="onStopBroadcastingClicked('panel')"
 	></ov-activities-panel>
 </ng-template>
 
