--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -12,7 +12,7 @@
 	[toolbarFullscreenButton]="true"
 	[toolbarCaptionsButton]="true"
 	[toolbarRecordingButton]="true"
-	[toolbarStreamingButton]="true"
+	[toolbarBroadcastingButton]="true"
 	[toolbarBackgroundEffectsButton]="true"
 	[toolbarLeaveButton]="true"
 	[toolbarChatPanelButton]="true"
@@ -26,7 +26,7 @@
 	[activitiesPanelRecordingActivity]="true"
 	[recordingActivityRecordingsList]="recordingList"
 	[recordingActivityRecordingError]="recordingError"
-	[streamingActivityStreamingError]="streamingError"
+	[broadcastingActivityBroadcastingError]="broadcastingError"
 	[toolbarSettingsButton]="true"
 	(onJoinButtonClicked)="onJoinClicked()"
 	(onToolbarLeaveButtonClicked)="onToolbarLeaveButtonClicked()"
@@ -41,9 +41,9 @@
 	(onActivitiesPanelStartRecordingClicked)="onStartRecordingClicked()"
 	(onActivitiesPanelStopRecordingClicked)="onStopRecordingClicked()"
 	(onActivitiesPanelDeleteRecordingClicked)="onDeleteRecordingClicked($event)"
-	(onActivitiesPanelStartStreamingClicked)="onStartStreamingClicked($event)"
-	(onActivitiesPanelStopStreamingClicked)="onStopStreamingClicked()"
-	(onToolbarStopStreamingClicked)="onStopStreamingClicked()"
+	(onActivitiesPanelStartBroadcastingClicked)="onStartBroadcastingClicked($event)"
+	(onActivitiesPanelStopBroadcastingClicked)="onStopBroadcastingClicked()"
+	(onToolbarStopBroadcastingClicked)="onStopBroadcastingClicked()"
 	(onNodeCrashed)="onNodeCrashed()"
 >
 	<!-- <div *ovActivitiesPanel>HELLO</div> -->
