openvidu-components: Renamed streaming by broadcasting on webcomponent

--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -11,7 +11,7 @@
 	[audioMuted]="_audioMuted"
 	[toolbarScreenshareButton]="_toolbarScreenshareButton"
 	[toolbarRecordingButton]="_toolbarRecordingButton"
-	[toolbarStreamingButton]="_toolbarStreamingButton"
+	[toolbarBroadcastingButton]="_toolbarBroadcastingButton"
 	[toolbarFullscreenButton]="_toolbarFullscreenButton"
 	[toolbarBackgroundEffectsButton]="_toolbarBackgroundEffectsButton"
 	[toolbarSettingsButton]="_toolbarSettingsButton"
@@ -27,11 +27,11 @@
 	[streamSettingsButton]="_streamSettingsButton"
 	[participantPanelItemMuteButton]="_participantPanelItemMuteButton"
 	[activitiesPanelRecordingActivity]="_activitiesPanelRecordingActivity"
-	[activitiesPanelStreamingActivity]="_activitiesPanelStreamingActivity"
+	[activitiesPanelBroadcastingActivity]="_activitiesPanelBroadcastingActivity"
 	[recordingActivityRecordingsList]="_recordingActivityRecordingsList"
 	[recordingActivityRecordingError]="_recordingActivityRecordingError"
-	[streamingActivityStreamingInfo]="_streamingActivityStreamingInfo"
-	[streamingActivityStreamingError]="_streamingActivityStreamingError"
+	[broadcastingActivityBroadcastingInfo]="_broadcastingActivityBroadcastingInfo"
+	[broadcastingActivityBroadcastingError]="_broadcastingActivityBroadcastingError"
 	(onJoinButtonClicked)="_onJoinButtonClicked()"
 	(onToolbarLeaveButtonClicked)="_onToolbarLeaveButtonClicked()"
 	(onToolbarCameraButtonClicked)="_onToolbarCameraButtonClicked()"
@@ -43,13 +43,13 @@
 	(onToolbarFullscreenButtonClicked)="_onToolbarFullscreenButtonClicked()"
 	(onToolbarStartRecordingClicked)="onStartRecordingClicked('toolbar')"
 	(onToolbarStopRecordingClicked)="onStopRecordingClicked('toolbar')"
-	(onToolbarStopStreamingClicked)="onStopStreamingClicked('toolbar')"
+	(onToolbarStopBroadcastingClicked)="onStopBroadcastingClicked('toolbar')"
 	(onActivitiesPanelStartRecordingClicked)="onStartRecordingClicked('panel')"
 	(onActivitiesPanelStopRecordingClicked)="onStopRecordingClicked('panel')"
 	(onActivitiesPanelDownloadRecordingClicked)="_onActivitiesDownloadRecordingClicked($event)"
 	(onActivitiesPanelDeleteRecordingClicked)="_onActivitiesDeleteRecordingClicked($event)"
-	(onActivitiesPanelStartStreamingClicked)="onStartStreamingClicked($event)"
-	(onActivitiesPanelStopStreamingClicked)="onStopStreamingClicked('panel')"
+	(onActivitiesPanelStartBroadcastingClicked)="onStartBroadcastingClicked($event)"
+	(onActivitiesPanelStopBroadcastingClicked)="onStopBroadcastingClicked('panel')"
 	(onSessionCreated)="_onSessionCreated($event)"
 	(onParticipantCreated)="_onParticipantCreated($event)"
 ></ov-videoconference>
