openvidu-components: Improved activities toolbar tags styles

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
@@ -70,6 +70,13 @@
 	flex-direction: column;
 }
 
+#activities-tag {
+	display: inline-flex;
+}
+
+#activities-tag > div {
+	margin-left: 5px;
+}
 .recording-tag,
 .broadcasting-tag {
 	padding: 0 10px;
