--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.css
@@ -66,7 +66,7 @@
 	display: flex;
 }
 
-.colapsed {
+.collapsed {
 	flex-direction: column;
 }
 
@@ -157,11 +157,19 @@
 	#session-name {
 		display: none;
 	}
+
+	#activities-tag {
+		display: grid;
+		gap: 5px;
+	}
 }
 
 @media (max-width: 850px) {
 	#branding-logo {
 		display: none;
+	}
+	#session-info-container {
+		display: inline-flex;
 	}
 }
 
