--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
@@ -1,22 +1,29 @@
 <mat-toolbar id="toolbar" role="heading" fxLayout fxLayoutAlign="center" fxLayoutGap="40px">
-	<div fxFlex="20%" fxLayoutAlign="start center" id="info-container" *ngIf="screenSize !== 'xs'">
+	<div
+		fxFlex="20%"
+		fxLayoutAlign="start center"
+		id="info-container"
+		*ngIf="screenSize !== 'xs' || recordingStatus === _recordingStatus.STARTED || broadcastingStatus !== _broadcastingStatus.STARTED"
+	>
 		<div>
 			<img *ngIf="!isMinimal && showLogo" id="branding-logo" src="assets/images/logo.png" ovLogo />
-			<div id="session-info-container" [class.colapsed]="recordingStatus === _recordingStatus.STARTED">
+			<div
+				id="session-info-container"
+				[class.collapsed]="recordingStatus === _recordingStatus.STARTED || broadcastingStatus === _broadcastingStatus.STARTED"
+			>
 				<span id="session-name" *ngIf="!isMinimal && session && session.sessionId && showSessionName">{{ session.sessionId }}</span>
 				<div id="activities-tag">
 					<div *ngIf="recordingStatus === _recordingStatus.STARTED" id="recording-tag" class="recording-tag">
 						<mat-icon class="blink">radio_button_checked</mat-icon>
 						<span class="blink">REC</span>
-						<span> | {{ recordingTime | date : 'H:mm:ss' }}</span>
+						<span *ngIf="recordingTime"> | {{ recordingTime | date : 'H:mm:ss' }}</span>
 					</div>
 					<div *ngIf="broadcastingStatus === _broadcastingStatus.STARTED" id="broadcasting-tag" class="broadcasting-tag">
 						<mat-icon class="blink">sensors</mat-icon>
 						<span class="blink">LIVE</span>
-						<span> | {{ broadcastingTime | date : 'H:mm:ss' }}</span>
+						<span *ngIf="broadcastingTime"> | {{ broadcastingTime | date : 'H:mm:ss' }}</span>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
