openvidu-components: Updated testapp

--- a/openvidu-components-angular/src/app/dashboard/dashboard.component.html
+++ b/openvidu-components-angular/src/app/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
 		<div id="testing-app">
 
 			<h2>Testing APP</h2>
-			<p>App for testing openvidu-angular</p>
+			<p>App for automated testing of openvidu-angular</p>
 
 			<input type="hidden" #selection />
 
