--- a/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.html
@@ -20,7 +20,7 @@
         </mat-select>
       </mat-form-field>
 
-      <app-recording-properties [(recordingProperties)]="sessionProperties.defaultRecordingProperties">
+      <app-recording-properties [recordingProperties]="sessionProperties.defaultRecordingProperties">
       </app-recording-properties>
 
       <div id="allow-transcoding-checkbox-div">
