--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/activities-panel/recording-activity/recording-activity.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/activities-panel/recording-activity/recording-activity.component.html
@@ -117,6 +117,7 @@
 					</button>
 
 					<button
+						*ngIf="isSessionCreator"
 						mat-icon-button
 						class="delete-recording-btn"
 						id="delete-recording-btn"
