--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -4,7 +4,7 @@
 	[lang]="'en'"
 	[captionsLang]=""
 	[captionsLangOptions]="[{ name: 'Spanish', ISO: 'es-ES' },{ name: 'English', ISO: 'en-US' }]"
-	[prejoin]="false"
+	[prejoin]="true"
 	[participantName]="'Participant'"
 	[videoMuted]="false"
 	[audioMuted]="false"
@@ -41,6 +41,7 @@
 	(onActivitiesPanelStartRecordingClicked)="onStartRecordingClicked()"
 	(onActivitiesPanelStopRecordingClicked)="onStopRecordingClicked()"
 	(onActivitiesPanelDeleteRecordingClicked)="onDeleteRecordingClicked($event)"
+	(onActivitiesPanelForceRecordingUpdate)="onForceRecordingUpdate()"
 	(onActivitiesPanelStartBroadcastingClicked)="onStartBroadcastingClicked($event)"
 	(onActivitiesPanelStopBroadcastingClicked)="onStopBroadcastingClicked()"
 	(onToolbarStopBroadcastingClicked)="onStopBroadcastingClicked()"
