--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
@@ -100,6 +100,7 @@
 		(onStartRecordingClicked)="onStartRecordingClicked('panel')"
 		(onStopRecordingClicked)="onStopRecordingClicked('panel')"
 		(onDeleteRecordingClicked)="onDeleteRecordingClicked($event)"
+		(onForceRecordingUpdate)="onForceRecordingUpdate()"
 		(onStartBroadcastingClicked)="onStartBroadcastingClicked($event)"
 		(onStopBroadcastingClicked)="onStopBroadcastingClicked('panel')"
 	></ov-activities-panel>
