openvidu-components: Emitted an event when language has been changed

--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -46,6 +46,7 @@
 	(onActivitiesPanelStopBroadcastingClicked)="onStopBroadcastingClicked()"
 	(onToolbarStopBroadcastingClicked)="onStopBroadcastingClicked()"
 	(onNodeCrashed)="onNodeCrashed()"
+	(onLangChanged)="onLangChanged($event)"
 >
 	<!-- <div *ovActivitiesPanel>HELLO</div> -->
 
