--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -1,9 +1,10 @@
 <ov-videoconference
 	[tokens]="tokens"
 	[minimal]="false"
-	[lang]="'en'"
+	[lang]="'es'"
+	[langOptions]="[{ name: 'Spanish', lang: 'es' },{ name: 'custom', lang: 'cus' }]"
 	[captionsLang]=""
-	[captionsLangOptions]="[{ name: 'Spanish', ISO: 'es-ES' },{ name: 'English', ISO: 'en-US' }]"
+	[captionsLangOptions]="[{ name: 'Spanish', lang: 'es-ES' },{ name: 'English', lang: 'en-US' }]"
 	[prejoin]="true"
 	[participantName]="'Participant'"
 	[videoMuted]="false"
