--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -4,6 +4,7 @@
 	[tokens]="_tokens"
 	[minimal]="_minimal"
 	[lang]="_lang"
+	[langOptions]="_langOptions"
 	[captionsLang]="_captionsLang"
 	[captionsLangOptions]="_captionsLangOptions"
 	[prejoin]="_prejoin"
