openvidu-components: Added unique id to video elements

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.html
@@ -41,6 +41,7 @@
 		(dblclick)="toggleVideoEnlarged()"
 		[streamManager]="_stream.streamManager"
 		[mutedSound]="_stream?.participant?.isMutedForcibly"
+		[participantId]="_stream?.participant?.id"
 	></ov-video>
 
 	<div class="status-icons">
