openvidu-components: Added network control directives
Allowed frameRate, resolution and simulcast customization

--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -1,11 +1,18 @@
 <ov-videoconference
+	[simulcast]="true"
 	[tokens]="tokens"
 	[minimal]="false"
 	[lang]="'es'"
-	[langOptions]="[{ name: 'Spanish', lang: 'es' },{ name: 'custom', lang: 'cus' }]"
+	[langOptions]="[
+		{ name: 'Spanish', lang: 'es' },
+		{ name: 'custom', lang: 'cus' }
+	]"
 	[captionsLang]=""
-	[captionsLangOptions]="[{ name: 'Spanish', lang: 'es-ES' },{ name: 'English', lang: 'en-US' }]"
-	[prejoin]="true"
+	[captionsLangOptions]="[
+		{ name: 'Spanish', lang: 'es-ES' },
+		{ name: 'English', lang: 'en-US' }
+	]"
+	[prejoin]="false"
 	[participantName]="'Participant'"
 	[videoMuted]="false"
 	[audioMuted]="false"
@@ -20,6 +27,8 @@
 	[toolbarParticipantsPanelButton]="true"
 	[toolbarDisplayLogo]="true"
 	[toolbarDisplaySessionName]="true"
+	[streamResolution]="'160x120'"
+	[streamFrameRate]="2"
 	[streamDisplayParticipantName]="true"
 	[streamDisplayAudioDetection]="true"
 	[streamSettingsButton]="true"
@@ -49,9 +58,12 @@
 	(onNodeCrashed)="onNodeCrashed()"
 	(onLangChanged)="onLangChanged($event)"
 >
-	<!-- <div *ovActivitiesPanel>HELLO</div> -->
+	<div *ovActivitiesPanel>{{ 'CUSTOM.BUTTON' | translate }}</div>
 
 	<!-- <ov-toolbar *ovToolbar [activitiesPanelButton]="false"
 	[chatPanelButton]="false"></ov-toolbar> -->
-
+	<!-- <div *ovStream="let stream">
+		<ov-stream [stream]="stream" [displayParticipantName]="false" [frameRate]="2" [resolution]="'160x120'"></ov-stream>
+		<p>{{ stream.participant.nickname }}</p>
+	</div> -->
 </ov-videoconference>
