openvidu-components: Support screen audio
Now screen is always visible and independent of the camera connection. It has its own audio

--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -58,7 +58,7 @@
 	(onNodeCrashed)="onNodeCrashed()"
 	(onLangChanged)="onLangChanged($event)"
 >
-	<div *ovActivitiesPanel>{{ 'CUSTOM.BUTTON' | translate }}</div>
+	<!-- <div *ovActivitiesPanel>{{ 'CUSTOM.BUTTON' | translate }}</div> -->
 
 	<!-- <ov-toolbar *ovToolbar [activitiesPanelButton]="false"
 	[chatPanelButton]="false"></ov-toolbar> -->
