openvidu-components: Emitted event when broadcasting button is clicked

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
@@ -50,6 +50,7 @@
 		(onActivitiesPanelButtonClicked)="onActivitiesPanelButtonClicked()"
 		(onStartRecordingClicked)="onStartRecordingClicked('toolbar')"
 		(onStopRecordingClicked)="onStopRecordingClicked('toolbar')"
+		(onStartBroadcastingClicked)="onToolbarStartBroadcastingClicked.emit()"
 		(onStopBroadcastingClicked)="onStopBroadcastingClicked('toolbar')"
 	>
 		<ng-template #toolbarAdditionalButtons>
