--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -47,6 +47,7 @@
 	(onToolbarFullscreenButtonClicked)="_onToolbarFullscreenButtonClicked()"
 	(onToolbarStartRecordingClicked)="onStartRecordingClicked('toolbar')"
 	(onToolbarStopRecordingClicked)="onStopRecordingClicked('toolbar')"
+	(onToolbarStartBroadcastingClicked)="onToolbarStartBroadcastingClicked.emit()"
 	(onToolbarStopBroadcastingClicked)="onStopBroadcastingClicked('toolbar')"
 	(onActivitiesPanelStartRecordingClicked)="onStartRecordingClicked('panel')"
 	(onActivitiesPanelStopRecordingClicked)="onStopRecordingClicked('panel')"
