--- a/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
+++ b/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
@@ -143,7 +143,7 @@
                   [collapsedHeight]="'20px'" [expandedHeight]="'20px'" class="event-name">
                   {{event.eventName}}
                 </mat-expansion-panel-header>
-                <div class="event-content">{{event.eventContent}}</div>
+                <div class="event-content" [ngClass]="'event-' + event.eventName">{{event.eventContent}}</div>
               </mat-expansion-panel>
             </mat-accordion>
           </div>
