--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.html
@@ -51,13 +51,14 @@
 	</div>
 
 	<div *ngIf="!isMinimal && showSettingsButton" id="settings-container" class="videoButtons">
+
 		<button
 			mat-icon-button
 			(click)="toggleVideoMenu($event)"
 			matTooltip="{{ 'STREAM.SETTINGS' | translate }}"
 			matTooltipPosition="above"
 			aria-label="Video settings menu"
-			id="video-settings-btn-{{this._stream.streamManager?.stream?.typeOfVideo}}"
+			id="video-settings-btn-{{ this._stream.streamManager?.stream?.typeOfVideo }}"
 		>
 			<mat-icon>more_vert</mat-icon>
 		</button>
@@ -68,7 +69,12 @@
 				<span *ngIf="videoSizeIcon === videoSizeIconEnum.NORMAL">{{ 'STREAM.ZOOM_OUT' | translate }}</span>
 				<span *ngIf="videoSizeIcon === videoSizeIconEnum.BIG">{{ 'STREAM.ZOOM_IN' | translate }}</span>
 			</button>
-			<button mat-menu-item id="sound-btn" *ngIf="!this._stream.participant.local && this._stream.type === videoTypeEnum.CAMERA" (click)="toggleMuteForcibly()">
+			<button
+				mat-menu-item
+				id="sound-btn"
+				*ngIf="!this._stream.participant.local && this._stream.type === videoTypeEnum.CAMERA"
+				(click)="toggleMuteForcibly()"
+			>
 				<mat-icon *ngIf="!_stream.participant.isMutedForcibly">volume_up</mat-icon>
 				<span *ngIf="!_stream.participant.isMutedForcibly">{{ 'STREAM.MUTE_SOUND' | translate }}</span>
 
